--- a/src/Base58Encoding/Base58Encoding.csproj
+++ b/src/Base58Encoding/Base58Encoding.csproj
@@ -4,12 +4,26 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+    <PackageId>Base58Encoding</PackageId>
+    <Authors>Nikolay Zdravkov</Authors>
+    <Description>A high-performance Base58 encoding/decoding library for .NET</Description>
+    <PackageTags>base58;encoding;bitcoin;cryptocurrency</PackageTags>
+    <PackageProjectUrl>https://github.com/unsafePtr/Base58Encoding</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/unsafePtr/Base58Encoding</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>Base58Encoding.Benchmarks</_Parameter1>
     </AssemblyAttribute>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
