--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -2,19 +2,25 @@ name: Build and Publish to NuGet
 
 on:
   push:
+    tags:
+      - 'v*.*.*'
     branches: [ master, main ]
     paths:
       - 'src/Base58Encoding/**'
       - '!src/Base58Encoding.Tests/**'
       - '!src/Base58Encoding.Benchmarks/**'
-    tags:
-      - 'v*.*.*'
   pull_request:
     branches: [ master, main ]
     paths:
       - 'src/Base58Encoding/**'
       - '!src/Base58Encoding.Tests/**'
       - '!src/Base58Encoding.Benchmarks/**'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Package version (e.g., 1.0.0)'
+        required: false
+        type: string
 
 jobs:
   build:
@@ -26,6 +32,10 @@ jobs:
     - name: Get version from tag
       if: startsWith(github.ref, 'refs/tags/v')
       run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+      
+    - name: Get version from input
+      if: github.event_name == 'workflow_dispatch' && github.event.inputs.version != ''
+      run: echo "VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
     
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
@@ -41,12 +51,12 @@ jobs:
     - name: Test
       run: dotnet test src/Base58Encoding.Tests/Base58Encoding.Tests.csproj --configuration Release --no-build --verbosity normal
       
-    - name: Pack (with version from tag)
-      if: startsWith(github.ref, 'refs/tags/v')
+    - name: Pack (with version)
+      if: env.VERSION != ''
       run: dotnet pack src/Base58Encoding/Base58Encoding.csproj --configuration Release --no-build --output ./artifacts -p:PackageVersion=${{ env.VERSION }}
       
     - name: Pack (without version)
-      if: "!startsWith(github.ref, 'refs/tags/v')"
+      if: env.VERSION == ''
       run: dotnet pack src/Base58Encoding/Base58Encoding.csproj --configuration Release --no-build --output ./artifacts
       
     - name: Upload artifacts
