--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -51,15 +51,12 @@ jobs:
     - name: Test
       run: dotnet test src/Base58Encoding.Tests/Base58Encoding.Tests.csproj --configuration Release --no-build --verbosity normal
       
-    - name: Pack (with version)
+    - name: Pack
       if: env.VERSION != ''
       run: dotnet pack src/Base58Encoding/Base58Encoding.csproj --configuration Release --no-build --output ./artifacts -p:PackageVersion=${{ env.VERSION }}
       
-    - name: Pack (without version)
-      if: env.VERSION == ''
-      run: dotnet pack src/Base58Encoding/Base58Encoding.csproj --configuration Release --no-build --output ./artifacts
-      
     - name: Upload artifacts
+      if: env.VERSION != ''
       uses: actions/upload-artifact@v4
       with:
         name: nupkg
@@ -68,8 +65,8 @@ jobs:
   publish:
     needs: build
     runs-on: ubuntu-latest
-    # Only publish on version tags
-    if: startsWith(github.ref, 'refs/tags/v')
+    # Only publish on version tags or manual trigger with version
+    if: startsWith(github.ref, 'refs/tags/v') || (github.event_name == 'workflow_dispatch' && github.event.inputs.version != '')
     
     steps:
     - name: Download artifacts
