--- a/src/Base58Encoding.Benchmarks/Base58Encoding.Benchmarks.csproj
+++ b/src/Base58Encoding.Benchmarks/Base58Encoding.Benchmarks.csproj
@@ -5,12 +5,12 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.15.2" />
-    <PackageReference Include="NBitcoin" Version="9.0.0" />
-    <PackageReference Include="SimpleBase" Version="5.0.0" />
+    <PackageReference Include="SimpleBase" Version="5.4.1" />
   </ItemGroup>
 
   <ItemGroup>
