--- a/src/Base58Encoding.Benchmarks/Base58Encoding.Benchmarks.csproj
+++ b/src/Base58Encoding.Benchmarks/Base58Encoding.Benchmarks.csproj
@@ -2,15 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
+    <TargetFrameworks>net10.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.15.2" />
-    <PackageReference Include="SimpleBase" Version="5.4.1" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.15.8" />
+    <PackageReference Include="SimpleBase" Version="5.6.0" />
   </ItemGroup>
 
   <ItemGroup>
