--- a/src/Base58Encoding/Base58Encoding.csproj
+++ b/src/Base58Encoding/Base58Encoding.csproj
@@ -1,34 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFrameworks>net9.0;net10.0</TargetFrameworks>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
+  <PropertyGroup>
+    <TargetFrameworks>net10.0</TargetFrameworks>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
 
-		<PackageId>Base58Encoding</PackageId>
-		<Authors>Nikolay Zdravkov</Authors>
-		<Description>A high-performance Base58 encoding/decoding library for .NET</Description>
-		<PackageTags>base58;encoding;bitcoin;cryptocurrency</PackageTags>
-		<PackageProjectUrl>https://github.com/unsafePtr/Base58Encoding</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/unsafePtr/Base58Encoding</RepositoryUrl>
-		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-	</PropertyGroup>
+    <PackageId>Base58Encoding</PackageId>
+    <Authors>Nikolay Zdravkov</Authors>
+    <Description>A high-performance Base58 encoding/decoding library for .NET</Description>
+    <PackageTags>base58;encoding;bitcoin;cryptocurrency</PackageTags>
+    <PackageProjectUrl>https://github.com/unsafePtr/Base58Encoding</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/unsafePtr/Base58Encoding</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-			<_Parameter1>Base58Encoding.Benchmarks</_Parameter1>
-		</AssemblyAttribute>
-	</ItemGroup>
-	<ItemGroup>
-		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-			<_Parameter1>Base58Encoding.Tests</_Parameter1>
-		</AssemblyAttribute>
-	</ItemGroup>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Base58Encoding.Benchmarks</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Base58Encoding.Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 
-	<ItemGroup>
-		<None Include="..\..\README.md" Pack="true" PackagePath="\"/>
-	</ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
 
 </Project>
